# migrate

./: README.md  migrate  pyproject.toml  setup.cfg
src/: migrate.py
